complete mobile responsive for 320px

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -538,9 +538,10 @@
 }
 
 .page main .divide {
-  background-image: url("/images/divide-back.png") 50% 50%;
+  background-image: url("/images/divide-back.png");
   height: 160px;
   width: 100%;
+  background-size: cover !important;
 }
 
 .page main .main-footer {
@@ -600,6 +601,12 @@
   width: 50px;
   height: 50px;
   margin-bottom: 100px;
+}
+
+@media (max-width: 320px) {
+  .page main .service-item .avatar-item {
+    margin-bottom: 50px;
+  }
 }
 
 .page main .service-item .avatar-item img {
@@ -1101,6 +1108,12 @@
 
   .page main .guide-card .description p {
     font-size: 12px;
+  }
+}
+
+@media (max-width: 320px) {
+  .page main .guide-card .title p {
+    font-size: 13px;
   }
 }
 
@@ -1705,14 +1718,14 @@
   margin-top: -100px;
 }
 
-.page main .contact-page .contact-section .message-form .segment {
+.page main .contact-page .contact-section .message-form {
   background: -webkit-gradient(linear, left top, left bottom, from(#09133a), to(#070e29));
   background: linear-gradient(to bottom, #09133a 0%, #070e29 100%);
   padding: 20px;
   border-radius: 5px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group {
+.page main .contact-page .contact-section .message-form .form-group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1722,7 +1735,7 @@
   position: relative;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .field {
+.page main .contact-page .contact-section .message-form .form-group .field {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -1731,15 +1744,15 @@
   margin-bottom: 25px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .field:first-child {
+.page main .contact-page .contact-section .message-form .form-group .field:first-child {
   margin-left: 0;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .field:last-child {
+.page main .contact-page .contact-section .message-form .form-group .field:last-child {
   margin-right: 0;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .phone-form {
+.page main .contact-page .contact-section .message-form .form-group .phone-form {
   text-align: left;
   margin-bottom: 10px;
   margin-left: 20px;
@@ -1749,12 +1762,12 @@
           flex: 1;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .phone-form svg {
+.page main .contact-page .contact-section .message-form .form-group .phone-form svg {
   color: #8341ff;
   width: 20px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .phone-form .react-phone-number-input__phone {
+.page main .contact-page .contact-section .message-form .form-group .phone-form .react-phone-number-input__phone {
   background: #050a20 !important;
   border: 2px solid #202c5a;
   padding: 12px;
@@ -1764,48 +1777,48 @@
   padding-bottom: 20px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .form-group .custom-error {
+.page main .contact-page .contact-section .message-form .form-group .custom-error {
   position: absolute;
   bottom: -10px;
   padding: 0;
 }
 
-.page main .contact-page .contact-section .message-form .segment label {
+.page main .contact-page .contact-section .message-form label {
   color: #9aa2bf !important;
   font-family: "Gotham Book";
   font-size: 16px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .field.error label:after {
+.page main .contact-page .contact-section .message-form .field.error label:after {
   content: "*";
   color: #e71f1f;
   padding-left: 3px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .field.error input {
+.page main .contact-page .contact-section .message-form .field.error input {
   border-color: #8341ff !important;
 }
 
-.page main .contact-page .contact-section .message-form .segment .field label {
+.page main .contact-page .contact-section .message-form .field label {
   text-align: left;
   padding-bottom: 10px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .field input {
+.page main .contact-page .contact-section .message-form .field input {
   background: #050a20 !important;
   border: 2px solid #202c5a;
   padding: 12px;
   color: #202c5a;
 }
 
-.page main .contact-page .contact-section .message-form .segment textarea {
+.page main .contact-page .contact-section .message-form textarea {
   background: #050a20 !important;
   border: 2px solid #202c5a;
   padding: 12px;
   color: #202c5a;
 }
 
-.page main .contact-page .contact-section .message-form .segment .privacy-section {
+.page main .contact-page .contact-section .message-form .privacy-section {
   padding-top: 10px;
   padding-bottom: 10px;
   margin-top: 10px;
@@ -1822,25 +1835,25 @@
           align-items: flex-start;
 }
 
-.page main .contact-page .contact-section .message-form .segment .privacy-section.checkbox_border {
+.page main .contact-page .contact-section .message-form .privacy-section.checkbox_border {
   border: 1px solid #8341ff;
 }
 
-.page main .contact-page .contact-section .message-form .segment .privacy-section .checkbox label:before {
+.page main .contact-page .contact-section .message-form .privacy-section .checkbox label:before {
   background: #050a20 !important;
   border: 2px solid #202c5a;
 }
 
-.page main .contact-page .contact-section .message-form .segment .privacy-section .terms-section {
+.page main .contact-page .contact-section .message-form .privacy-section .terms-section {
   margin-left: 5px;
   margin-top: -2px;
 }
 
-.page main .contact-page .contact-section .message-form .segment .privacy-section .terms-section span {
+.page main .contact-page .contact-section .message-form .privacy-section .terms-section span {
   color: #9aa2bf !important;
 }
 
-.page main .contact-page .contact-section .message-form .segment .privacy-section .terms-section a {
+.page main .contact-page .contact-section .message-form .privacy-section .terms-section a {
   color: #3e75db;
   font-weight: bold;
   font-family: "Gotham Bold";
@@ -1848,7 +1861,7 @@
   display: inline-block;
 }
 
-.page main .contact-page .contact-section .message-form .segment .primary-button {
+.page main .contact-page .contact-section .message-form .primary-button {
   width: 50%;
 }
 
@@ -2494,15 +2507,20 @@
     padding-right: 0;
   }
 
-  .page main .contact-page .contact-section .message-form .segment label {
+  .page main .contact-page .contact-section .message-form label {
     font-size: 12px;
   }
 
-  .page main .contact-page .contact-section .message-form .segment .privacy-section .terms-section {
+  .page main .contact-page .contact-section .message-form .phone-form .react-phone-number-input__phone {
+    margin-top: 7px !important;
+    padding: 18px 8px !important;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section .terms-section {
     margin-top: 10px;
   }
 
-  .page main .contact-page .contact-section .message-form .segment .privacy-section .terms-section a {
+  .page main .contact-page .contact-section .message-form .privacy-section .terms-section a {
     font-size: 12px;
   }
 
@@ -2543,6 +2561,11 @@
 
   .page main .service-page .service-section.review {
     min-height: 100vh;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background: url(/images/illustration-dev-back.png) center center/100% 100% no-repeat;
   }
 
   .page main .service-page .service-section.review .service-review {
@@ -3992,7 +4015,7 @@
     margin: 0 !important;
     padding: 0 !important;
     display: inline-block !important;
-    margin-left: 130px !important;
+    margin-left: 120px !important;
   }
 
   .segment.mobile-navbar .mobile-register .primary-button {
@@ -4081,6 +4104,11 @@
     margin-left: 0 !important;
   }
 
+  .segment.mobile-navbar .menu .right.menu .item:last-child {
+    border: 1px solid #fff;
+    margin-left: 10px;
+  }
+
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     background: #070e29 !important;
     position: absolute;
@@ -4093,6 +4121,7 @@
   }
 
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition .item {
+    border: none;
     color: #747b96 !important;
     display: inline-block;
     text-transform: capitalize;
@@ -4111,6 +4140,10 @@
 
   .page {
     padding-top: 50px;
+  }
+
+  .page main .divide {
+    height: 34px;
   }
 
   .page main .home-page .homepage-header {
@@ -4166,8 +4199,314 @@
     display: none;
   }
 
-  .page main .home-page .divide {
-    height: 120px;
+  .page main .portfolio-page .portfolio-header {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient {
+    height: 300px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description {
+    padding: 50px 0px 0px 0px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-text {
+    padding-bottom: 40px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-text p {
+    font-size: 14px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure {
+    margin: 0px 10px 0px 10px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure .figure {
+    padding: 0px 10px 0px 10px;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure .figure img {
+    width: 40px;
+    height: auto;
+  }
+
+  .page main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure .figure p {
+    font-size: 14px !important;
+  }
+
+  .page main .portfolio-page .portfolio-studios {
+    margin-top: 110px;
+    margin-bottom: 150px;
+  }
+
+  .page main .portfolio-page .main-footer {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .page main .portfolio-page .main-footer .main-footer-description {
+    width: 100%;
+    margin-top: -220px;
+  }
+
+  .page main .portfolio-page .main-footer .main-footer-description h3 {
+    font-size: 22px;
+  }
+
+  .page main .portfolio-page .main-footer .main-footer-description .primary-button {
+    padding: 15px 72px;
+  }
+
+  .page main .about-page .about-header {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .page main .about-page .about-header .header-gradient {
+    height: 300px;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description {
+    padding-bottom: 25px;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .header-text h2 {
+    font-size: 30px;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .header-text p {
+    font-size: 13px;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .counter-box {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .counter-box .box {
+    margin-bottom: 20px;
+  }
+
+  .page main .about-page .about-header .header-gradient .header-description .counter-box .box h4 {
+    margin-bottom: 5px;
+    font-size: 30px;
+  }
+
+  .page main .about-page .about-section:nth-of-type(2) {
+    margin-top: 1150px;
+  }
+
+  .page main .about-page .about-section:nth-of-type(2) .mobile {
+    margin-top: 0;
+  }
+
+  .page main .about-page .about-section:nth-of-type(5) {
+    margin-top: 750px;
+  }
+
+  .page main .about-page .about-section:nth-of-type(5) .alice-carousel {
+    margin-left: 0;
+  }
+
+  .page main .about-page .about-section:nth-of-type(5) .alice-carousel .alice-carousel__stage-item {
+    width: 100% !important;
+  }
+
+  .page main .about-page .about-section:nth-of-type(5) .alice-carousel .alice-carousel__dots {
+    text-align: center !important;
+  }
+
+  .page main .about-page .about-section:nth-of-type(5) .alice-carousel_prev_btn,
+  .page main .about-page .about-section:nth-of-type(5) .alice-carousel_next_btn {
+    display: none;
+  }
+
+  .page main .about-page .about-section .headquarters {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .page main .contact-page .contact-header {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .page main .contact-page .contact-header .header-gradient {
+    height: 300px;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .header-description .header-text {
+    padding: 0;
+  }
+
+  .page main .contact-page .contact-header .header-gradient .header-description .header-text h2 {
+    font-size: 30px;
+  }
+
+  .page main .contact-page .contact-section {
+    margin-top: 730px;
+  }
+
+  .page main .contact-page .contact-section .message-form .form-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .page main .contact-page .contact-section .message-form .form-group .field {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .page main .contact-page .contact-section .message-form .form-group .custom-error {
+    bottom: 90px;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section .checkbox {
+    margin-bottom: 0px;
+  }
+
+  .page main .contact-page .contact-section .message-form .privacy-section .terms-section {
+    margin: 0;
+    padding-left: 22px;
+  }
+
+  .page main .contact-page .contact-section .message-form .primary-button {
+    width: 100%;
+  }
+
+  .page main .service-page .service-header {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  .page main .service-page .service-header .header-gradient {
+    height: 300px;
+  }
+
+  .page main .service-page .service-header .header-gradient .custom-col-6 {
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0;
+  }
+
+  .page main .service-page .service-header .header-gradient .header-description .header-text {
+    padding: 0;
+  }
+
+  .page main .service-page .service-header .header-gradient .figures {
+    padding-top: 50px;
+  }
+
+  .page main .service-page .service-header .header-gradient .figures .figure {
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+
+  .page main .service-page .service-header .header-gradient .figures .figure p {
+    font-size: 10px;
+  }
+
+  .page main .service-page .service-header .header-gradient .starter-group .service-item-observer .service-item .avatar-item img {
+    left: 33px;
+  }
+
+  .page main .service-page .service-section.review {
+    min-height: 700px;
+    width: 100%;
+    background-size: cover;
+    background-position: unset;
+    background-repeat: no-repeat;
+    margin-top: 860px;
+  }
+
+  .page main .service-page .service-section.review .service-review {
+    padding-top: 110px;
+  }
+
+  .page main .service-page .service-section.mobile {
+    margin-top: 900px;
+  }
+
+  .page main .service-page .service-section.branding {
+    margin-top: 1400px;
+  }
+
+  .page main .service-page .service-section.tech .custom-col-8 {
+    width: 100% !important;
+    margin: 0 !important;
+    padding: 0;
+  }
+
+  .page main .service-page .service-section.tech .guide-card-observer .guide-card .avatar {
+    width: 60px !important;
+  }
+
+  .page main .service-page .main-footer {
+    min-height: 290px;
+    height: 290px;
+    width: 100%;
+    background-size: cover;
+    max-width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    margin-top: 150px;
+  }
+
+  .page main .service-page .main-footer .main-footer-description {
+    width: 100%;
+    margin-top: -220px;
+  }
+
+  .page main .service-page .main-footer .main-footer-description h3 {
+    font-size: 22px;
+  }
+
+  .page main .service-page .main-footer .main-footer-description .primary-button {
+    padding: 15px 72px;
   }
 
   .footer h5 {
